src/test/deca/context/invalid/cast_incompatible.deca
// Description:
//    Test d'un cast impossible
//
// Résultats:
//    Ligne 20 : Conversion d'une valeur de type void en une valeur de type B impossible (règle 3.39)
//
// Historique:
//    créé le 21/01/2017

class A {
  int x;
  void setX(int x) {
    this.x = x;
  }
}
class B extends A {
}
{
  A a;
  B b = (B) (a.setX(1));
}
